--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+     <meta name = "keywords" content = "HTML, Tesla Roadster, TeslaRoadster" />
+      <meta name = "description" content = "Experience the future of automotive innovation with the Tesla Roadster, combining cutting-edge technology and unparalleled driving dynamics." />
     <meta name="google-site-verification" content="oy7jF7p-82gc0UkGWevzDrv01GqPgaNrTSzKHqkhNKU" />
     <title>Tesla Roadster</title>
     <link rel="stylesheet" href="bootstrap.min.css">
