--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="logo.svg">
+    <link rel="canonical" href="https://teslaroadsterx.online/">
 </head>
 
 <body style="background: var(--bs-black);">
